# C_course_design

./: CMakeLists.txt  README.md  main.c  run-utf8.ps1
data_house/: reservations.db  rooms.db
information/inc/: hotel.h  hotel_storage.h  input.h  menu.h  role.h
information/src/: hotel.c  hotel_storage.c  input.c  menu.c  role.c
